--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#188de7" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>Сборка Markup</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/css/air-datepicker.css" />
-    <link rel="stylesheet" href="../assets/css/slick.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/air-datepicker.css" />
+    <link rel="stylesheet" href="assets/css/slick.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -98,48 +98,28 @@
             <div class="slider-template">
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider1.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider1.png" alt="" />
                     </div>
                 </div>
 
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider2.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider2.png" alt="" />
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider3.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider3.png" alt="" />
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider4.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider4.png" alt="" />
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider5.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider5.png" alt="" />
                     </div>
                 </div>
                 <div class="slider-template__item">
@@ -153,11 +133,7 @@
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img
-						class="slider-first-img"
-						src="../assets/img/slider7.png"
-						alt=""
-					/>
+                        <img class="slider-first-img" src="assets/img/slider7.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -179,7 +155,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider2.png"
+							src="assets/img/slider2.png"
 							alt=""
 						/>
                         </div>
@@ -189,7 +165,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider3.png"
+							src="assets/img/slider3.png"
 							alt=""
 						/>
                         </div>
@@ -198,7 +174,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider4.png"
+							src="assets/img/slider4.png"
 							alt=""
 						/>
                         </div>
@@ -207,7 +183,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider5.png"
+							src="assets/img/slider5.png"
 							alt=""
 						/>
                         </div>
@@ -216,7 +192,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider6.png"
+							src="assets/img/slider6.png"
 							alt=""
 						/>
                         </div>
@@ -225,7 +201,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider7.png"
+							src="assets/img/slider7.png"
 							alt=""
 						/>
                         </div>
@@ -234,7 +210,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="../assets/img/slider1.png"
+							src="assets/img/slider1.png"
 							alt=""
 						/>
                         </div>
@@ -260,13 +236,9 @@
                     </div>
                 </div>
                 <div class="template-history__box-img">
-                    <img src="../assets/img/about-box1-1.svg" alt="s" />
-                    <img
-					class="img-box-first"
-					src="../assets/img/about-box1-2.svg"
-					alt="s"
-				/>
-                    <img src="../assets/img/about-box1-3.svg" alt="s" />
+                    <img src="assets/img/about-box1-1.svg" alt="s" />
+                    <img class="img-box-first" src="assets/img/about-box1-2.svg" alt="s" />
+                    <img src="assets/img/about-box1-3.svg" alt="s" />
                 </div>
                 <div class="template-history__box-title">
                     <div class="title-second">Popularity</div>
@@ -287,8 +259,8 @@
             </div>
             <div class="template-history__box">
                 <div class="template-history__box-img-second img-display-box">
-                    <img src="../assets/img/about-box3-1.svg" alt="" />
-                    <img src="../assets/img/about-box3-2.svg" alt="" />
+                    <img src="assets/img/about-box3-1.svg" alt="" />
+                    <img src="assets/img/about-box3-2.svg" alt="" />
                 </div>
                 <div class="template-history__box-title">
                     <div class="title-second">Celebrating</div>
@@ -301,9 +273,9 @@
                     </div>
                 </div>
                 <div class="template-history__box-img-second-down">
-                    <img src="../assets/img/about-box3-4m.svg" alt="s" />
-                    <img class="img-second" src="../assets/img/about-box3-5.svg" alt="s" />
-                    <img src="../assets/img/about-box-6.svg" alt="s" />
+                    <img src="assets/img/about-box3-4m.svg" alt="s" />
+                    <img class="img-second" src="assets/img/about-box3-5.svg" alt="s" />
+                    <img src="assets/img/about-box-6.svg" alt="s" />
                 </div>
             </div>
         </div>
@@ -344,9 +316,9 @@
         </div>
     </section>
     <section id="menu" class="menu container">
-        <img class="img-bg-firs" src="../assets/img/menu1.svg" alt="s" />
-        <img class="img-bg-second" src="../assets/img/menu2.svg" alt="s" />
-        <img class="img-bg-third" src="../assets/img/menu3.svg" alt="s" />
+        <img class="img-bg-firs" src="assets/img/menu1.svg" alt="s" />
+        <img class="img-bg-second" src="assets/img/menu2.svg" alt="s" />
+        <img class="img-bg-third" src="assets/img/menu3.svg" alt="s" />
         <div class="template-title">Menu</div>
         <div class="menu-mainbox">
             <div class="menu-mainbox__template">
@@ -627,7 +599,7 @@
                 </div>
             </form>
         </div>
-        <img class="img-contacts" src="../assets/img/contacts.svg" alt="phone" />
+        <img class="img-contacts" src="assets/img/contacts.svg" alt="phone" />
     </section>
 
     <div id="popup" class="popup">
