--- a/index.html
+++ b/index.html
@@ -257,8 +257,13 @@
             </div>
             <div class="template-history__box">
                 <div class="template-history__box-img-second img-display-box">
-                    <img src="assets/img/about-box3-1.svg" alt="" />
-                    <img src="assets/img/about-box3-2.svg" alt="" />
+                    <div>
+                        <img src="assets/img/about-box3-1.svg" alt="" />
+                    </div>
+
+                    <div class="img-second-box">
+                        <img src="assets/img/about-box3-2.svg" alt="" />
+                    </div>
                 </div>
                 <div class="template-history__box-title">
                     <div class="title-second">Celebrating</div>
@@ -271,9 +276,17 @@
                     </div>
                 </div>
                 <div class="template-history__box-img-second-down">
-                    <img src="assets/img/about-box3-4m.svg" alt="s" />
-                    <img class="img-second" src="assets/img/about-box3-5.svg" alt="s" />
-                    <img src="assets/img/about-box-6.svg" alt="s" />
+                    <div class="img-column">
+                        <img src="assets/img/about-box3-4m.svg" alt="s" />
+                        <img src="assets/img/about-box-6.svg" alt="s" />
+                    </div>
+                    <div class="img-second">
+                        <img
+						class="img-second-img"
+						src="assets/img/about-box3-5.svg"
+						alt="s"
+					/>
+                    </div>
                 </div>
             </div>
         </div>
@@ -588,6 +601,7 @@
                                 <li class="dropdown-item">3</li>
                                 <li class="dropdown-item">4</li>
                                 <li class="dropdown-item">5</li>
+                                <li class="dropdown-item">6</li>
                             </ul>
                         </div>
                     </div>
