--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
                     </div>
                     <div class="col-md-12 border-form">
                         <label for="">Name :</label>
-                        <input type="text" placeholder="Jenia i Lesia" />
+                        <input id="name-imput" type="text" placeholder="Jenia i Lesia" />
                     </div>
                     <div class="col-md-12 border-form">
                         <label for="">Phone :</label>
-                        <input class="numberPhone" type="text" placeholder="+38 (067)-777-15-30" />
+                        <input id="phone-imput" class="numberPhone" type="text" placeholder="+38 (067)-777-15-30" />
                     </div>
                     <div class="col-md-6">
                         <label for="airdatepicker">When</label>
@@ -587,14 +587,12 @@
                     <div class="col-md-6 time-form">
                         <label class="ocklock" for="">Time</label>
 
-                        <input id="time-unput" type="text" class="timepicker" placeholder=" " />
+                        <input id="time-unput" type="text" class="timepicker" placeholder="10:00" />
                     </div>
                     <div class="col-md-9">
                         <label for="person">How much person</label>
                         <div class="dropdown-center">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                0
-                            </button>
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-item">1</li>
                                 <li class="dropdown-item">2</li>
@@ -607,7 +605,9 @@
                     </div>
                     <div class="col-md-12">
                         <div class="btn-box">
-                            <button id="openPopup" class="btn btn-primary">Book</button>
+                            <button id="openPopup" type="submit" disabled class="btn btn-primary">
+                                Book
+                            </button>
                         </div>
                     </div>
                 </div>
