--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             Pancakes that will change your life and you recall the taste of childhood
         </div>
         <div class="container-fluid">
-            <div class="first-screen-img">Pancake-Bar</div>
+            <div class="first-screen-img">
+                <img src="assets/img/first-logo-screen.png" alt="" />
+            </div>
             <div class="btn-box">
                 <a href="#myForm">
 				<button class="btn btn-primary">Book the table</button>
@@ -483,7 +485,8 @@
                             <div class="menu-mainbox__template-item-price">$12</div>
                         </div>
                         <div class="menu-mainbox__template-item-description">
-                            Salmon, egg, bread, tomatoes, arugula, pesto
+                            Salmon, egg, bread, tomatoes,<br />
+                            arugula, pesto
                         </div>
                     </div>
                     <div class="menu-mainbox__template-item">
@@ -574,20 +577,20 @@
                     </div>
                     <div class="col-md-12 border-form">
                         <label for="">Name :</label>
-                        <input id="name-imput" type="text" placeholder="Jenia i Lesia" />
+                        <input id="name-imput" type="text" autocomplete="off" placeholder="Jenia i Lesia" />
                     </div>
                     <div class="col-md-12 border-form">
                         <label for="">Phone :</label>
-                        <input id="phone-imput" class="numberPhone" type="text" placeholder="+38 (067)-777-15-30" />
+                        <input id="phone-imput" class="numberPhone" type="text" autocomplete="off" placeholder="+38 (067)-777-15-30" />
                     </div>
                     <div class="col-md-6">
                         <label for="airdatepicker">When</label>
-                        <input class="calendar-contact" type="text" placeholder="01/01/2023" id="airdatepicker" />
+                        <input class="calendar-contact" type="text" autocomplete="off" placeholder="01.01.2023" id="airdatepicker" />
                     </div>
                     <div class="col-md-6 time-form">
                         <label class="ocklock" for="">Time</label>
 
-                        <input id="time-unput" type="text" class="timepicker" placeholder="10:00" />
+                        <input id="time-unput" type="text" autocomplete="off" class="timepicker" placeholder="10:00" />
                     </div>
                     <div class="col-md-9">
                         <label for="person">How much person</label>
