--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </html>
 <header>
     <div class="container">
-        <div class="logo"><a class="navbar-brand" href="#">Pancake-Bar</a></div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
+                <div class="logo"><a class="navbar-brand" href="#">Pancake-Bar</a></div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -51,12 +51,12 @@
 
 <main class="wrapper home">
     <section class="first-screen">
-        <div class="title-second">
+        <div class="title-second first-title">
             Pancakes that will change your life and you recall the taste of childhood
         </div>
         <div class="container-fluid">
             <div class="first-screen-img">
-                <img src="assets/img/first-logo-screen.png" alt="" />
+                <img class="img-fluid" src="assets/img/first-logo-screen.png" alt="" />
             </div>
             <div class="btn-box">
                 <a href="#myForm">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="about-img">
-                    <img src="assets/img/cake.svg" alt="cake" />
+                    <img class="img-fluid" src="assets/img/cake.svg" alt="cake" />
                 </div>
             </div>
         </div>
@@ -102,38 +102,66 @@
             <div class="slider-template">
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider1.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider1.png"
+						alt=""
+					/>
                     </div>
                 </div>
 
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider2.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider2.png"
+						alt=""
+					/>
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider3.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider3.png"
+						alt=""
+					/>
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider4.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider4.png"
+						alt=""
+					/>
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider5.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider5.png"
+						alt=""
+					/>
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider6.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider6.png"
+						alt=""
+					/>
                     </div>
                 </div>
                 <div class="slider-template__item">
                     <div class="slider-template__item-wrapper">
-                        <img class="slider-first-img" src="assets/img/slider7.png" alt="" />
+                        <img
+						class="img-fluid slider-first-img"
+						src="assets/img/slider7.png"
+						alt=""
+					/>
                     </div>
                 </div>
             </div>
@@ -297,27 +325,38 @@
     <section id="advantages" class="advantages">
         <div class="container">
             <div class="template-title">Advantages</div>
-            <div class="title-second">Why our Pancakes so special and delicious ?</div>
+            <div class="title-second main-advantages">
+                Why our Pancakes so special and delicious ?
+            </div>
             <div class="advantages-content">
                 <div class="advantages-content__box">
-                    <div class="title-second">Recipe</div>
-                    <div class="template-discription">
-                        We use the original traditional American recipe that was passed down
-                        from mouth to mouth.
+                    <img class="img-fluid" src="assets/img/Frame1.png" alt="" />
+                    <div class="text-img">
+                        <div class="title-second">Recipe</div>
+                        <div class="template-discription">
+                            We use the original traditional American recipe that was passed down
+                            from mouth to mouth.
+                        </div>
                     </div>
                 </div>
                 <div class="advantages-content__box">
-                    <div class="title-second">Douugh</div>
-                    <div class="template-discription">
-                        Using only the best ingredients, that's why our dough is so soft and
-                        melts in your mouth.
+                    <img class="img-fluid" src="assets/img/Frame2.png" alt="" />
+                    <div class="text-img">
+                        <div class="title-second">Douugh</div>
+                        <div class="template-discription">
+                            Using only the best ingredients, that's why our dough is so soft and
+                            melts in your mouth.
+                        </div>
                     </div>
                 </div>
                 <div class="advantages-content__box">
-                    <div class="title-second">Types</div>
-                    <div class="template-discription">
-                        More than 10 types of pancakes for every taste. Vegan, with fruit or
-                        classic with syrup, what's your choice?
+                    <img class="img-fluid" src="assets/img/Frame3.png" alt="" />
+                    <div class="text-img">
+                        <div class="title-second">Types</div>
+                        <div class="template-discription">
+                            More than 10 types of pancakes for every taste. Vegan, with fruit or
+                            classic with syrup, what's your choice?
+                        </div>
                     </div>
                 </div>
             </div>
@@ -663,7 +702,7 @@
         <div class="contacts-footer">
             <ul class="navbar-nav-img">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><svg class="icon-footer" width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a class="nav-link" href="#"><svg class="icon-footer-instagram" width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="-0.5" y="0.5" width="67" height="67" rx="33.5" transform="matrix(-1 0 0 1 67 0)" fill="#FAF4D7"/>
             <path fill-rule="evenodd" clip-rule="evenodd" d="M20.642 20.642C22.6437 18.6403 25.639 17.875 29.5 17.875H38.5C42.361 17.875 45.3563 18.6403 47.358 20.642C49.3597 22.6437 50.125 25.639 50.125 29.5V38.5C50.125 42.361 49.3597 45.3563 47.358 47.358C45.3563 49.3597 42.361 50.125 38.5 50.125H29.5C25.639 50.125 22.6437 49.3597 20.642 47.358C18.6403 45.3563 17.875 42.361 17.875 38.5V35.545C17.875 34.9237 18.3787 34.42 19 34.42C19.6213 34.42 20.125 34.9237 20.125 35.545V38.5C20.125 42.139 20.8597 44.3937 22.233 45.767C23.6063 47.1403 25.861 47.875 29.5 47.875H38.5C42.139 47.875 44.3937 47.1403 45.767 45.767C47.1403 44.3937 47.875 42.139 47.875 38.5V29.5C47.875 25.861 47.1403 23.6063 45.767 22.233C44.3937 20.8597 42.139 20.125 38.5 20.125H29.5C25.861 20.125 23.6063 20.8597 22.233 22.233C20.8597 23.6063 20.125 25.861 20.125 29.5C20.125 30.1213 19.6213 30.625 19 30.625C18.3787 30.625 17.875 30.1213 17.875 29.5C17.875 25.639 18.6403 22.6437 20.642 20.642Z" fill="#6F5643"/>
             <path fill-rule="evenodd" clip-rule="evenodd" d="M29.4922 29.4922C30.6877 28.2967 32.3092 27.625 34 27.625C34.8372 27.625 35.6662 27.7899 36.4396 28.1103C37.2131 28.4306 37.9158 28.9002 38.5078 29.4922C39.0998 30.0842 39.5694 30.7869 39.8897 31.5604C40.2101 32.3338 40.375 33.1628 40.375 34C40.375 34.8372 40.2101 35.6662 39.8897 36.4396C39.5694 37.2131 39.0998 37.9158 38.5078 38.5078C37.9158 39.0998 37.2131 39.5694 36.4396 39.8897C35.6662 40.2101 34.8372 40.375 34 40.375C32.3092 40.375 30.6877 39.7034 29.4922 38.5078C28.2967 37.3123 27.625 35.6908 27.625 34C27.625 32.3092 28.2967 30.6877 29.4922 29.4922ZM34 29.875C32.906 29.875 31.8568 30.3096 31.0832 31.0832C30.3096 31.8568 29.875 32.906 29.875 34C29.875 35.094 30.3096 36.1432 31.0832 36.9168C31.8568 37.6904 32.906 38.125 34 38.125C34.5417 38.125 35.0781 38.0183 35.5786 37.811C36.079 37.6037 36.5338 37.2999 36.9168 36.9168C37.2999 36.5338 37.6037 36.079 37.811 35.5786C38.0183 35.0781 38.125 34.5417 38.125 34C38.125 33.4583 38.0183 32.9219 37.811 32.4214C37.6037 31.921 37.2999 31.4662 36.9168 31.0832C36.5338 30.7001 36.079 30.3963 35.5786 30.189C35.0781 29.9817 34.5417 29.875 34 29.875Z" fill="#6F5643"/>
