--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider1.png"
+						src="assets/img/slider12.png"
 						alt=""
 					/>
                     </div>
@@ -114,7 +114,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider2.png"
+						src="assets/img/slider22.png"
 						alt=""
 					/>
                     </div>
@@ -123,7 +123,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider3.png"
+						src="assets/img/slider32.png"
 						alt=""
 					/>
                     </div>
@@ -132,7 +132,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider4.png"
+						src="assets/img/slider42.png"
 						alt=""
 					/>
                     </div>
@@ -141,7 +141,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider5.png"
+						src="assets/img/slider52.png"
 						alt=""
 					/>
                     </div>
@@ -150,7 +150,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider6.png"
+						src="assets/img/slider62.png"
 						alt=""
 					/>
                     </div>
@@ -159,7 +159,7 @@
                     <div class="slider-template__item-wrapper">
                         <img
 						class="img-fluid slider-first-img"
-						src="assets/img/slider7.png"
+						src="assets/img/slider72.png"
 						alt=""
 					/>
                     </div>
@@ -183,7 +183,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider2.png"
+							src="assets/img/slider22.png"
 							alt=""
 						/>
                         </div>
@@ -193,7 +193,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider3.png"
+							src="assets/img/slider32.png"
 							alt=""
 						/>
                         </div>
@@ -202,7 +202,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider4.png"
+							src="assets/img/slider42.png"
 							alt=""
 						/>
                         </div>
@@ -211,7 +211,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider5.png"
+							src="assets/img/slider52.png"
 							alt=""
 						/>
                         </div>
@@ -220,7 +220,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider6.png"
+							src="assets/img/slider62.png"
 							alt=""
 						/>
                         </div>
@@ -229,7 +229,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider7.png"
+							src="assets/img/slider72.png"
 							alt=""
 						/>
                         </div>
@@ -238,7 +238,7 @@
                         <div class="slider-template__item-wrapper-second">
                             <img
 							class="img-fluid slider-second-img"
-							src="assets/img/slider1.png"
+							src="assets/img/slider12.png"
 							alt=""
 						/>
                         </div>
@@ -368,9 +368,9 @@
         </div>
     </section>
     <section id="menu" class="menu container">
-        <img class="img-bg-firs" src="assets/img/menu1.svg" alt="s" />
-        <img class="img-bg-second" src="assets/img/menu2.svg" alt="s" />
-        <img class="img-bg-third" src="assets/img/menu3.svg" alt="s" />
+        <img class="img-bg-firs img-fluid" src="assets/img/menu1.svg" alt="s" />
+        <img class="img-bg-second img-fluid" src="assets/img/menu2.svg" alt="s" />
+        <img class="img-bg-third img-fluid" src="assets/img/menu3.svg" alt="s" />
         <div class="template-title">Menu</div>
         <div class="menu-mainbox">
             <div class="menu-mainbox__template">
@@ -634,7 +634,7 @@
                     <div class="col-md-9">
                         <label class="preson-text" for="person">How much person</label>
                         <div class="dropdown-center">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                            <button id="personalButton" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-item">1</li>
                                 <li class="dropdown-item">2</li>
