--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="template-history">
             <div class="template-history__box">
                 <div class="template-history__box-title">
-                    <div class="title-second">Nascence</div>
+                    <div class="title-second before-first">Nascence</div>
                     <div class="template-discription">
                         The pancake has a very long history and featured in cookery books as
                         far back as 1439. The tradition of tossing or flipping them is almost
@@ -264,12 +264,16 @@
                     </div>
                 </div>
                 <div class="template-history__box-img">
-                    <img src="assets/img/about-box1-1.svg" alt="s" />
-                    <img class="img-box-first" src="assets/img/about-box1-2.svg" alt="s" />
-                    <img src="assets/img/about-box1-3.svg" alt="s" />
+                    <img class="img-fluid" src="assets/img/about-box1-1.svg" alt="s" />
+                    <img
+					class="img-box-first img-fluid"
+					src="assets/img/about-box1-2.svg"
+					alt="s"
+				/>
+                    <img class="img-fluid" src="assets/img/about-box1-3.svg" alt="s" />
                 </div>
-                <div class="template-history__box-title">
-                    <div class="title-second">Popularity</div>
+                <div class="template-history__box-title margin-left">
+                    <div class="title-second before-second">Popularity</div>
                     <div class="template-discription">
                         In the USA pancakes became very popular in the middle of the 20th
                         century. They began to be prepared not only at home, but also in
@@ -278,6 +282,16 @@
                         traditional American recipe, which makes them so tasty and
                         unforgettable !
                     </div>
+                    <img
+					class="mobile-first-p"
+					src="assets/img/mobile-first-p.png"
+					alt=""
+				/>
+                    <img
+					class="mobile-second-p"
+					src="assets/img/mobile-second-p.png"
+					alt=""
+				/>
                 </div>
             </div>
             <div class="template-history__box-second">
@@ -288,15 +302,23 @@
             <div class="template-history__box">
                 <div class="template-history__box-img-second img-display-box">
                     <div>
-                        <img src="assets/img/about-box3-1.svg" alt="" />
+                        <img
+						class="mobile-first img-fluid"
+						src="assets/img/about-box3-1.svg"
+						alt=""
+					/>
                     </div>
 
                     <div class="img-second-box">
-                        <img src="assets/img/about-box3-2.svg" alt="" />
+                        <img
+						class="mobile-second img-fluid"
+						src="assets/img/about-box3-2.svg"
+						alt=""
+					/>
                     </div>
                 </div>
-                <div class="template-history__box-title">
-                    <div class="title-second">Celebrating</div>
+                <div class="template-history__box-title margin-right">
+                    <div class="title-second before-third">Celebrating</div>
                     <div class="template-discription">
                         In 1445 a woman of Olney heard the shriving bell while she was making
                         pancakes and ran to the church in her apron, still clutching her
@@ -307,8 +329,16 @@
                 </div>
                 <div class="template-history__box-img-second-down">
                     <div class="img-column">
-                        <img src="assets/img/about-box3-4m.svg" alt="s" />
-                        <img src="assets/img/about-box-6.svg" alt="s" />
+                        <img
+						class="mobile-third img-fluid"
+						src="assets/img/about-box3-4m.svg"
+						alt="s"
+					/>
+                        <img
+						class="mobile-fore img-fluid"
+						src="assets/img/about-box-6.svg"
+						alt="s"
+					/>
                     </div>
                     <div class="img-second">
                         <img
