--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#188de7" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <meta name="theme-color" content="#faf4d7" />
     <title>Сборка Markup</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/air-datepicker.css" />
