--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#188de7" />
+
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <meta name="theme-color" content="#faf4d7" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#faf4d7" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#faf4d7" />
     <title>Сборка Markup</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/air-datepicker.css" />
