--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#faf4d7" />
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#faf4d7" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Сборка Markup</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/air-datepicker.css" />
